--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -7,5 +7,5 @@
 
 
 
-<app-article-viewer [articleViewer]="article"></app-article-viewer>
+<app-article-viewer [articleViewer]="article" (articleChange)="onClick($event)"></app-article-viewer>
 
