--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,4 +1,4 @@
-<h1>Our articles !</h1>
+<h1>Push the button for MAGIC ! !</h1>
 
 
 <button *ngFor="let item of articles" (click)="goToArticle(item.id)">
