--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,5 @@
+<a routerLink="/">Home</a>
+<a routerLink="/about">About</a>
+<a routerLink="/about/aboutteam">About Team</a>
 <p class = "yellow">Our articles are the best articles in the world !</p>
+
