--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-welcome></app-welcome>
+<!--<app-welcome></app-welcome>-->
+<!--<app-http-lesson></app-http-lesson>-->
+<app-header></app-header>
+
+<router-outlet></router-outlet>
+<app-footer></app-footer>
