--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<!--<app-welcome></app-welcome>-->
-<!--<app-http-lesson></app-http-lesson>-->
+<app-welcome></app-welcome>
+<app-http-lesson></app-http-lesson>
+<br>
 <app-header></app-header>
 
 <router-outlet></router-outlet>
